--- a/4.0.Filamentos.md
+++ b/4.0.Filamentos.md
@@ -7,9 +7,26 @@ Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 * PETG
 * HIPS
 * Nylon
-* Nijaflex
+* Ninjaflex
+* Filaflex
+* ...
 
-### Par'ametros
+## Flexibles
+
+![filamentoFlexible](./images/filamentoFlexible.jpg)
+
+## Composites:
+
+* Madera
+
+
+![madera](./images/filamentoMadera.jpg)
+
+* Bronce
+![bronce](./images/filamentoBronce.png)
+
+
+### Parámetros
 
 * Temperatura extrusor
 * Temperatura cama caliente
@@ -25,17 +42,6 @@ Cada material se trabaja a una temperatura diferente, de hecho cada filamento ne
 * PLA: 190º
 * Nylon: 260º
 * Filaflex: 220º
-
-### Tracción
-
-[Plásticos](http://spainlabs.com/wiki/index.php?title=Impresoras_3D)
-
-Composites:
-
-* Madera
-![madera](http://rascomras.com/store/104-thickbox_leometr/laywoo-d3-madera-filamento-3mm-250gr.jpg)
-* Bronce
-![bronce](http://www.3ders.org/images2014/copperFill_3d-printing-filament-1.jpg)
 
 ## Ejemplos 
 
