--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -1,7 +1,12 @@
+# Curso de introducción a la impresión 3D
 
- ## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
+http://bit.ly/3DPrimaria
 
+### José Antonio Vacas @javacasm
 
+![CCbySA](images/CCbySQ_88x31.png)
+
+## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
 
 ## 1. Uso
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
