--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -1,8 +1,9 @@
 # Introducción al 3D
-¿Qué es una impresora 3D? [Historia](./0.1.Historia.md)
+¿Qué es una impresora 3D? 
 
 ![proceso impresión](./images/3D-printing-process-chain.png)
 
+[Historia](./0.1.Historia.md)
 
 ¿Qué podemos imprimir? [Aplicaciones](./0.2.Aplicaciones.md)
 
