--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -11,9 +11,9 @@
 
 ¿Con qué materiales podemos imprimir? [Filamentos](./4.0.Filamentos.md)
 
-¿Cuánto cuesta una impresora? [Comprar una impresora](./0.3.ComprarImpresora3d.md)
+¿Cuánto cuesta una impresora? [Comprar una impresora](./0.4.ComprarImpresora3d.md)
 
 ¿Cuánto cuesta el filamento? Unos 16-20€ el kilo. Un Among Us de 5cm de alto pesa unos 8g -> Podemos hacer 125 con un rollo -> 13 céntimos cada uno
 
-¿Siempre salen bien las impresiones? No, pero cuánto más imprimes mejor salen. [Fallos de impresón](./FallosImpresion.md)
+¿Siempre salen bien las impresiones? No, pero cuánto más imprimes mejor salen. [Fallos de impresón](./7.5.FallosImpresion.md)
 
