--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -6,7 +6,7 @@ http://bit.ly/3DPrimaria
 
 ![CCbySA](images/CCbySQ_88x31.png)
 
-## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
+## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md) [Vídeo 0]()
 
 ## 1. Uso
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
