--- a/1.0.ProcesoImpresion3D.md
+++ b/1.0.ProcesoImpresion3D.md
@@ -3,9 +3,9 @@
 
 ![](./images/20-best-3d-printing-software-tools-all-are-free.png)
 
-# MODELO (exportación)-> STL (laminador)-> GCode -> Impresora
+##### MODELO (exportación)-> STL (laminador)-> GCode -> Impresora
 
-## [Slicer/Laminadores](./Slicers.md)
+## [Slicer/Laminadores](./3.0.Slicers.md)
 
 ![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Infill_density.jpg/220px-Infill_density.jpg)
 
