--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -1,17 +1,29 @@
 ## Slicers/Laminadores
 
+![SlicerPrusa](./images/prusaslicer.jpg)
 
-Es prácticamente un arte experimental
-* Conviene anotar las pruebas
+
+* 5 - 6 opciones controlan el 80% del resultado
+* 200 opciones el 20% restante 
 * Depende de:
     * La impresora
     * El filamento
-    * Las condiciones atmosféricas
+    * El modelo
+    * La calidad 
     * ....
+* Si tenemos que hacer pruebas conviene anotar los valores que usamos
 
-### Slic3r
 
-Preferible el ["Prusa edition"](https://github.com/prusa3d/Slic3r/releases)
+### [Ultimaker Cura](https://ultimaker.com/en/products/ultimaker-cura-software)
+
+![ultimakerCura](./images/ultimakerCura.jpeg)
+
+[Mega tutorial](https://formizable.com/mega-tutorial-de-cura-profundizando-en-cura-3d-slicer/)
+
+
+### [PrusaSlicer](https://www.prusa3d.es/prusaslicer/)
+
+![prusa slicer](./images/prusaslicer-starts-in-the-3d-editor-view-malolo-via-prusaprinters-200831_download.webp)
 
 [Documentación](http://imprimalia3d.com/recursosimpresion3d/gu-configuraci-n-par-metros-slic3r)
 
@@ -19,11 +31,6 @@ Preferible el ["Prusa edition"](https://github.com/prusa3d/Slic3r/releases)
 
 
 [Problemas con las dimensiones](https://manual.slic3r.org/troubleshooting/dimension-errors)
-
-
-### [Cura](https://ultimaker.com/en/products/ultimaker-cura-software)
-
-### [Repetier](https://www.repetier.com/download-now/)
 
 
 
