--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -6,11 +6,11 @@
 * 5 - 6 opciones controlan el 80% del resultado
 * 200 opciones el 20% restante 
 * Depende de:
-    * La impresora
-    * El filamento
-    * El modelo
-    * La calidad 
-    * ....
+    * El modelo de impresora
+    * El filamento utilizado
+    * El modelo a imprimir: relleno, soporte, aderencia
+    * La calidad: altura de capa 
+    * ...
 * Si tenemos que hacer pruebas conviene anotar los valores que usamos
 
 
