--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -8,7 +8,7 @@
 * Depende de:
     * El modelo de impresora
     * El filamento utilizado
-    * El modelo a imprimir: relleno, soporte, aderencia
+    * El modelo a imprimir: relleno, soporte, adherencia
     * La calidad: altura de capa 
     * ...
 * Si tenemos que hacer pruebas conviene anotar los valores que usamos
