--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -1,7 +1,7 @@
 #### Repositorios de modelos 3D
 
-* [youimagine](https://www.youmagine.com)
 * [Thingiverse](http://www.thingiverse.com)
+* [youimagine](https://www.youmagine.com)
 * [yeggi](http://www.yeggi.com/)
 * [MyMiniFactory](https://www.myminifactory.com/)
 * [GrabCad](https://grabcad.com/)
@@ -11,4 +11,4 @@
 
 #### Recursos
 
-https://www.creativosonline.org/blog/los-mejores-lugares-encontrar-plantillas-impresion-3d.html
+[Dónde encontrar modelos 3D](https://www.creativosonline.org/blog/los-mejores-lugares-encontrar-plantillas-impresion-3d.html)
