--- a/4.0.Filamentos.md
+++ b/4.0.Filamentos.md
@@ -2,13 +2,12 @@
 
 Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 
-* PLA
-* ABS
-* PETG
-* HIPS
-* Nylon
-* Ninjaflex
-* Filaflex
+* PLA: más ecológico y el más utilizado hoy en día
+* ABS: es de lo que están hechas las piezas de plástico que nos rodea, con la impresora es complicado de usar para piezas grandes y produce malos olores.
+* PETG: ecológico
+* HIPS: se disuelve fácilmente
+* Nylon: muy duro y semi flexible
+* Ninjaflex y Filaflex: muy flexibles
 * ...
 
 ## Flexibles
@@ -18,7 +17,6 @@ Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 ## Composites:
 
 * Madera
-
 
 ![madera](./images/filamentoMadera.jpg)
 
