--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -8,24 +8,24 @@ http://bit.ly/3DPrimaria
 
 ## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md) [Vídeo 0]()
 
-## 1. Uso
+## 1. Uso [Vídeo 1]()
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
 * Preparación impresora
 * Preparación del modelo
 * Impresión
 
-## 2. Modelos 3D
+## 2. Modelos 3D [Vídeo 2]()
 * ¿Dónde encontrarlos? [Repositorios de diseños](./2.0.Repositorios.md)
 
 
 ## 3. Programas para imprimir
-* [Laminadores/Slicers](./3.0.Slicers.md)
-* Cura
+* [Laminadores/Slicers](./3.0.Slicers.md) [Vídeo 3.0]()
+* Cura  [Vídeo 3.1]() [Vídeo 3.1.2]()
 * Prusa Slicer
 * [Arregladores de piezas](./3.4.ReparacionPiezas.md)
 
 
-## 4. [Filamentos](./4.0.Filamentos.md)
+## 4. [Filamentos](./4.0.Filamentos.md) [Vídeo 4.0]()
 * tipos
 * usos
 * calidades y precios
