--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -9,6 +9,10 @@
 * [Cult3D](https://cults3d.com/)
 * [repositorio de la Universidad Miguel Hernández de elche](http://impresion3d.edu.umh.es/)
 
+## [Tinkercad](https://tinkercad.com)
+
+Tinkercad es una web donde podemos crear diseños en 3D, pero también nos permite explorar las creaciones que publican otros usuarios y descargar ficheros STL para imprimir.
+
 #### Recursos
 
 [Dónde encontrar modelos 3D](https://www.creativosonline.org/blog/los-mejores-lugares-encontrar-plantillas-impresion-3d.html)
