--- a/4.0.Filamentos.md
+++ b/4.0.Filamentos.md
@@ -108,3 +108,12 @@ El filamento HIPS es un termoplástico con cualidades similares al ABS pero con 
 ### Recursos
 
 [Tipos de materiales](https://bitfab.io/es/materiales-de-impresion-3d-fdm/)
+
+
+## Cuidados del filamento
+
+La húmedad es una de las causas más frecuentes de deterioro de los filamentos. Pôr eso, cuando no los vayamos a usar debemos guardar los filamentos en bolsas para evitar que cojan humedad, lo que los haría más frágiles y más difíciles de imprimir.
+
+Muchas fabricante incluyen una bolsa con cierre tipo Zip para guardar los filamentos con más garantías.
+
+Esto no quiere decir que cada noche tengamos que guardar el filamento que no estemos usando, pero sí cuando no lo vayamos a usar durante unos días.
