--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -1,4 +1,4 @@
-# [TinkerCad](https://www.tinkercad.com/)
+# [TinkerCad.com](https://www.tinkercad.com/)
 
 ![1](./images/tinkercad.png)
 
@@ -7,7 +7,9 @@
 * Herramienta online gratuita
 * Necesita crearse una cuenta
 * Al entrar encontramos tutoriales sencillos
-* Interface:
+
+
+## Interface
   * Plano de trabajo
     * Podemos cambiar el plano de trabajo y así todo lo que hagamos se referirá al nuevo
   * A la derecha las paletas:
@@ -15,10 +17,10 @@
     * Letras, Números y símbolos
     * Favoritos
     * Extras
-    * Podemos importar modelos STLs
     * Usar los Generadores de Formas: Hay muchísimos!!!
     * Componentes
     * ¡¡Huecos!!
+  * Podemos importar modelos STLs    
   * ¡¡Tiene deshacer!!
   * Sobre una pieza podemos girar, mover, cambiar de tamaño, según selecciones los distintos puntos o flechas
   * Si tenemos varias piezas podemos
