--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -62,3 +62,11 @@ https://weareprintlab.com/blog/5-tinkercad-shortcuts-you-need-to-know
 ## Tutoriales
 
 https://caractermaker.es/category/diseno-3d/
+
+
+## Para docentes
+
+Confirmación de que eres un docente en el rol
+Lecciones temáticas
+Creacion de clases
+Cómo entran los alumnos
