--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -20,7 +20,12 @@
     * Usar los Generadores de Formas: Hay muchísimos!!!
     * Componentes
     * ¡¡Huecos!!
-  * Podemos importar modelos STLs    
+  * Ocultar
+  * Copiar y pegar
+  * Duplicar
+  * Duplicar ultimo proceso
+  * Copiar entre proyectos
+  * Podemos importar: modelos STLs, diseños tinkercad y 2D
   * ¡¡Tiene deshacer!!
   * Sobre una pieza podemos girar, mover, cambiar de tamaño, según selecciones los distintos puntos o flechas
   * Si tenemos varias piezas podemos
