--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -17,7 +17,6 @@ http://bit.ly/3DPrimaria
 ## 2. Modelos 3D [Vídeo 2]()
 * ¿Dónde encontrarlos? [Repositorios de diseños](./2.0.Repositorios.md)
 
-
 ## 3. Programas para imprimir
 * [Laminadores/Slicers](./3.0.Slicers.md) [Vídeo 3.0]()
 * Cura  [Vídeo 3.1]() [Vídeo 3.1.2]()
@@ -25,12 +24,10 @@ http://bit.ly/3DPrimaria
 * [Arregladores de piezas](./3.4.ReparacionPiezas.md)
 
 
-## 4. [Filamentos](./4.0.Filamentos.md) [Vídeo 4.0]()
+## 4. [Tipos de filamentos](./4.0.Filamentos.md) [Vídeo 4.0]()
 * tipos
 * usos
 * calidades y precios
-
-
 
 ## 5. Montaje y puesta a punto
 * [Estructura de una impresora](./5.0.EstructuraImpresora3D.md)
@@ -38,24 +35,26 @@ http://bit.ly/3DPrimaria
 * Calibración
 * Pruebas
 
-## 6. Mantenimiento
+## 6. Uso
+* Menus
+* AutoHome y calibración
+* Impresión
+* Cambio filamento
+
+## 7. Mantenimiento
 * Limpieza
 * Engrasado
 * Ajustes
 * Tensión de las correas
 
 
-## 7. Problemas más frecuentes
+## 8. Problemas más frecuentes
 * Atascos
 * Falta de calibración
 * Falta de tensión de las correas
 * Rotura o falta de ajuste de driver de motores
 * [Fallos de impresión](./7.5.FallosImpresion.md)
 
-## 8. Recetario
-* Mis piezas no se ajustan: [Calibración avanzada](https://coronavirusmakersmadrid.org/prueba-de-tolerancia/) 
-* Pie de elefante
-* Reciclaje: ¿Qué hago con los restos/sobrantes/piezas defectuosas?
 
 ## 9. Diseño 3D
 
@@ -74,3 +73,8 @@ http://bit.ly/3DPrimaria
 ### 9.5 [2D to 3D](9.5.2d-To-3D.md)
 
 ### 9.6 [BlockScad](./9.6.BlockScad.md)
+
+## 10. Recetario
+* Mis piezas no se ajustan: [Calibración avanzada](https://coronavirusmakersmadrid.org/prueba-de-tolerancia/) 
+* Pie de elefante
+* Reciclaje: ¿Qué hago con los restos/sobrantes/piezas defectuosas?
