--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -6,7 +6,7 @@
 
 * DLP
 
-![dlp](./images/Cost-effective-New-design-desktop-open-source-durable-precise-DIY-DLP-3d-printer-full-kit-excluding.jpg)
+![dlp](./images/DLP.png)
 
 * SLA
 
