--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -6,7 +6,7 @@
 * [MyMiniFactory](https://www.myminifactory.com/)
 * [GrabCad](https://grabcad.com/)
 * [Pinshape](https://pinshape.com)
-* [Cult3D](https://cults3d.com/)
+* [Cults3D](https://cults3d.com/)
 * [repositorio de la Universidad Miguel Hernández de elche](http://impresion3d.edu.umh.es/)
 
 ## [Tinkercad](https://tinkercad.com)
