--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -1,18 +1,26 @@
 # Tecnologías de impresión
 
-* FDM (FFF): La tecnología FDM estaba protegida por patente y nació una tecnología que en esencia es similar, Fused Filament Fabrication (FFF) que hemos visto en impresoras como RepRap.
+## FDM (FFF)
+
+La tecnología FDM (Fused deposition modeling) estaba protegida por patentes y nació una tecnología que en esencia es similar, o Fused Filament Fabrication (FFF) que hemos visto en impresoras como RepRap
 
 ![FFF](./images/450_1000.png)
 
-* DLP
+## DLP
+
+DLP (Digital Light Processing) una fuente de luz (similar a un proyector) solidifica una resina fotosensible dependiendo de la cantidad de luz recibida.
 
 ![dlp](./images/DLP.png)
 
-* SLA
+## SLA
+
+SLA (Stereolitografía) Similar a DLP pero la imagen se crea con un láser. Se pueden usar resinas más económicas (el láser es más potente).
 
 ![sla](./images/sla.jpg)
 
-* SLS
+## SLS  
+
+SLS (Selective laser sintering) es similar a SLA per en lugar de una resina usa un material pulverizado.
 
 ![sls](./images/sls.jpg)
 
