--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -25,6 +25,20 @@ SLS (Selective laser sintering) es similar a SLA per en lugar de una resina usa 
 ![sls](./images/sls.jpg)
 
 
+### FDM vs DLP
+
+Actualmente 
+
+* FDM va desde 0.5 a 0.127 mm
+* DLP consigue 0.05 a 0.01 mm
+
+![FDM_vs_DLP](./images/FDM_vs_DLP.jpeg)
+
+FDM 0.2mm vs DLP 0.02mm
+
+![FDM vs DLP](./images/FDMvsDLP2.png)
+
+
 
 ## Recursos
 
