--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -11,6 +11,11 @@
 
 ¿Con qué materiales podemos imprimir? [Filamentos](./4.0.Filamentos.md)
 
+[![Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://img.youtube.com/vi/U1Eg8adggDg/0.jpg)](https://youtu.be/U1Eg8adggDg)
+
+[Vídeo: 0.4 Tipos de filamentos para impresión 3D](https://youtu.be/U1Eg8adggDg)
+
+
 ¿Cuánto cuesta una impresora? [Comprar una impresora](./0.4.ComprarImpresora3d.md)
 
 ¿Cuánto cuesta el filamento? Unos 16-20€ el kilo. Un Among Us de 5cm de alto pesa unos 8g -> Podemos hacer 125 con un rollo -> 13 céntimos cada uno
