--- a/0.1.Historia.md
+++ b/0.1.Historia.md
@@ -1,5 +1,11 @@
 # Historia de la impresión 3D
 
+[![Vídeo: 0.0 Introduccion a la impresión 3D](https://img.youtube.com/vi/tcj_56s_TuQ/0.jpg)](https://youtu.be/tcj_56s_TuQ)
+
+
+[Vídeo: 0.0 Introduccion a la impresión 3D](https://youtu.be/tcj_56s_TuQ)
+
+
 * Patentes
 * Primeras ideas en los 80
 * Primeros desarrollos en los 90 en Stanford
