--- a/0.2.Aplicaciones.md
+++ b/0.2.Aplicaciones.md
@@ -1,6 +1,8 @@
 # Aplicaciones de la impresión 3D
 
+[![Vídeo: Aplicaciones de la impresión 3D](https://img.youtube.com/vi/rx7sOvkTJaU/0.jpg)](https://youtu.be/rx7sOvkTJaU)
 
+[Vídeo: Aplicaciones de la impresión 3D](https://youtu.be/rx7sOvkTJaU)
 
 ## Aplicaciones escolares
 
