--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -1,5 +1,10 @@
 # Tecnologías de impresión 3D
 
+[![Vídeo: 0.2 Tecnologías de impresoras 3D ](https://img.youtube.com/vi/VRNiLtmjmH0/0.jpg)](https://youtu.be/VRNiLtmjmH0)
+
+[Vídeo: 0.2 Tecnologías de impresoras 3D](https://youtu.be/VRNiLtmjmH0)
+
+
 ## FDM (FFF)
 
 La tecnología FDM (Fused deposition modeling) estaba protegida por patentes y nació una tecnología que en esencia es similar, o Fused Filament Fabrication (FFF) que hemos visto en impresoras como RepRap
@@ -51,3 +56,4 @@ FDM 0.2mm vs DLP 0.02mm
 
 
 [Tipos de impresoras 3D](http://comohacer.eu/comparativa-impresoras-3d/#Tipos_de_impresion_3D)
+
