--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -1,5 +1,11 @@
 # Comprar una impresora
 
+[![Vídeo: 0.5 ¿Qué impresora comprar?](https://img.youtube.com/vi/AFRegfBQCF0/0.jpg)](https://youtu.be/AFRegfBQCF0)
+
+
+[Vídeo: 0.5 ¿Qué impresora comprar?](https://youtu.be/AFRegfBQCF0)
+
+
 ## CREALITY ENDER 3 (160-180eu) 
 
 ![Ender 3](https://img.staticbg.com/thumb/large/oaupload/banggood/images/15/85/d40f00b0-8905-4d1e-b8cb-737a86e17f68.jpg)
