--- a/7.5.FallosImpresion.md
+++ b/7.5.FallosImpresion.md
@@ -1,5 +1,10 @@
 ## Problemas al imprimir
 
+[![Vídeo: Fallos de impresión 3D](https://img.youtube.com/vi/HSEIMJzSUuA/0.jpg)](https://youtu.be/HSEIMJzSUuA)
+
+[Vídeo: Fallos de impresión 3D](https://youtu.be/HSEIMJzSUuA)
+
+
 A medida que vamos imprimiendo vamos aprendiendo a mejorar la calidad del resultado.
 
 ![Fallo 0](./images/Fallo0.jpg)
@@ -14,3 +19,4 @@ Problema de ajuste de la impresora, probablemente de tensión en la correa del e
 ![Fallo 2](./images/oozing_3D_printing.jpg)
 
 Problema de ajuste de retracción
+
