--- a/7.5.FallosImpresion.md
+++ b/7.5.FallosImpresion.md
@@ -20,3 +20,7 @@ Problema de ajuste de la impresora, probablemente de tensión en la correa del e
 
 Problema de ajuste de retracción
 
+
+![](./images/EnredoFilamento.JPG)
+
+Enredo de filamento
