--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -4,12 +4,24 @@
 
 ![2](./images/notre-dame-tinkercad.png)
 
-* Herramienta online gratuita
-* Necesita crearse una cuenta
+Tinkercad es una herramienta de diseño 3D, utiliza un modelo aditivo, es decir vamos añadiendo componentes básicos hasta generar nuestro diseño.
+
+* Herramienta online gratuita para comenzar a diseñar en 3D
+[![Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://img.youtube.com/vi/P1mPtGoYHq4/0.jpg)](https://youtu.be/P1mPtGoYHq4)
+[Vídeo: 0. Introducción al diseño 3D con  Tinkercad](https://youtu.be/P1mPtGoYHq4)
+
+* Necesita crearse una cuenta: Podemos crearla con nuestro email o usar la autentificación de Google o de Facebook
+[![Vídeo: 1. Creación de un cuenta en Tinkercad](https://img.youtube.com/vi/RLo6XVDkulg/0.jpg)](https://youtu.be/RLo6XVDkulg)
+[Vídeo: 1. Creación de un cuenta en Tinkercad](https://youtu.be/RLo6XVDkulg)
+
 * Al entrar encontramos tutoriales sencillos
 
 
 ## Interface
+  * Creación de piezas y movimiento del punto de vista
+  [![Vídeo: 2-3. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://img.youtube.com/vi/MdqyZvXOxDU/0.jpg)](https://youtu.be/MdqyZvXOxDU)
+  [Vídeo: 2-3. Primeras piezas con Tinkercad. Movimiento de piezas y cambio del punto de vista](https://youtu.be/MdqyZvXOxDU)
+
   * Plano de trabajo
     * Podemos cambiar el plano de trabajo y así todo lo que hagamos se referirá al nuevo
   * A la derecha las paletas:
