--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -31,7 +31,7 @@ http://bit.ly/3DPrimaria
 
 ## 5. Montaje y puesta a punto
 * [Estructura de una impresora](./5.0.EstructuraImpresora3D.md)
-* Montaje
+* [Montaje](./5.2.Montaje.md)
 * Calibración
 * Pruebas
 
