--- a/1.0.ProcesoImpresion3D.md
+++ b/1.0.ProcesoImpresion3D.md
@@ -5,10 +5,21 @@
 
 ##### MODELO (exportación)-> STL (laminador)-> GCode -> Impresora
 
-## [Slicer/Laminadores](./3.0.Slicers.md)
+[![Vídeo: 1.0 Proceso de impresión 3D](https://img.youtube.com/vi/qP4qwX_k7ag/0.jpg)](https://youtu.be/qP4qwX_k7ag)
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Infill_density.jpg/220px-Infill_density.jpg)
+[Vídeo: 1.0 Proceso de impresión 3D](https://youtu.be/qP4qwX_k7ag)
 
-![](https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTngPP-JBdgFZos4bwJiuMUzGPMnk91Hu-5TEujpquw30h6TNjA)
+El proceso básico de impresión tiene los siguientes paso:
 
-![](https://static.wixstatic.com/media/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.png/v1/fill/w_593,h_404,al_c,q_80,usm_0.66_1.00_0.01/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.webp)
+1. Descargamos el modelo en formato STL, bien desde un repositorio de modelos o exportándolo de nuestro programa de diseño 3D
+1. En el programa laminador (slicer) configuramos cómo será la impresión:
+    1. Seleccionamos nuestro **modelo de impresora**
+    1. Seleccionamos el **tipo de filamento** a usar
+    1. Porcentaje de relleno
+    ![](https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTngPP-JBdgFZos4bwJiuMUzGPMnk91Hu-5TEujpquw30h6TNjA)
+    ![](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Infill_density.jpg/220px-Infill_density.jpg)
+
+    1. Calidad de la impresión, que vendrá dada principalmente por la **altura de capa**
+    1. Si queremos que se creen estructura de **soporte**
+    1. Si necesitamos estructuras para mejorar la **adherencia**
+    ![](https://static.wixstatic.com/media/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.png/v1/fill/w_593,h_404,al_c,q_80,usm_0.66_1.00_0.01/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.webp)
