--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -1,5 +1,9 @@
 #### Repositorios de modelos 3D
 
+[![Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://img.youtube.com/vi/CbpULxqERrs/0.jpg)](https://youtu.be/CbpULxqERrs)
+
+[Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://youtu.be/CbpULxqERrs)
+
 * [Thingiverse](http://www.thingiverse.com)
 * [youimagine](https://www.youmagine.com)
 * [yeggi](http://www.yeggi.com/)
