--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -2,6 +2,11 @@
 
 ![SlicerPrusa](./images/prusaslicer.jpg)
 
+[![Vídeo: 3.0 Laminadores/Slicer o cómo convertir tus diseños en órdenes para tu impresora 3D](https://img.youtube.com/vi/KEHSAjgWFt0/0.jpg)](https://youtu.be/KEHSAjgWFt0)
+
+
+[Vídeo: 3.0 Laminadores/Slicer o cómo convertir tus diseños en órdenes para tu impresora 3D](https://youtu.be/KEHSAjgWFt0)
+
 
 * 5 - 6 opciones controlan el 80% del resultado
 * 200 opciones el 20% restante 
