--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -23,6 +23,27 @@
 
 ![ultimakerCura](./images/ultimakerCura.jpeg)
 
+
+Vamos a ver cómo se usa Ultimaker Cura, lo utilizaremos con una pieza sencilla, haciendo todo el proceso hasta generar el fichero gcode que enviaremos a nuestra impresora
+
+[![Vídeo: 3.1 Uso de Ultimaker Cura como laminador (slicer) para impresión 3D](https://img.youtube.com/vi/clAie-Eyrr8/0.jpg)](https://youtu.be/clAie-Eyrr8)
+
+
+[Vídeo: 3.1 Uso de Ultimaker Cura como laminador (slicer) para impresión 3D](https://youtu.be/clAie-Eyrr8)
+
+
+Vamos a usar ahora Cura para hacer el laminado de una pieza más compleja que necesita de soporte y de adherencia. 
+
+Veremos el resultado impreso y lo compararemos con el que nos mostraba Cura en la previsualización
+
+
+[![Vídeo: 3.1.3 Usamos Cura con una pieza más compleja que necesita de soporte y de adherencia](https://img.youtube.com/vi/XUQR765Wtf0/0.jpg)](https://youtu.be/XUQR765Wtf0)
+
+[Vídeo: 3.1.3 Usamos Cura con una pieza más compleja que necesita de soporte y de adherencia](https://youtu.be/XUQR765Wtf0)
+
+
+
+
 [Mega tutorial](https://formizable.com/mega-tutorial-de-cura-profundizando-en-cura-3d-slicer/)
 
 
