--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -6,7 +6,7 @@ http://bit.ly/3DPrimaria
 
 ![CCbySA](images/CCbySQ_88x31.png)
 
-## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md) [Vídeo 0]()
+## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
 
 ## 1. Uso [Vídeo 1]()
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
@@ -18,13 +18,13 @@ http://bit.ly/3DPrimaria
 * ¿Dónde encontrarlos? [Repositorios de diseños](./2.0.Repositorios.md)
 
 ## 3. Programas para imprimir
-* [Laminadores/Slicers](./3.0.Slicers.md) [Vídeo 3.0]()
-* Cura  [Vídeo 3.1]() [Vídeo 3.1.2]()
+* [Laminadores/Slicers](./3.0.Slicers.md) 
+* Cura  [Vídeo 3.1]() 
 * Prusa Slicer
 * [Arregladores de piezas](./3.4.ReparacionPiezas.md)
 
 
-## 4. [Tipos de filamentos](./4.0.Filamentos.md) [Vídeo 4.0]()
+## 4. [Tipos de filamentos](./4.0.Filamentos.md) 
 * tipos
 * usos
 * calidades y precios
