--- a/5.0.EstructuraImpresora3D.md
+++ b/5.0.EstructuraImpresora3D.md
@@ -1,4 +1,10 @@
-# Impresora 3D
+# Estructura de una impresora 3D
+
+[![Vídeo: 5.0 Estructurade una impresora 3D](https://img.youtube.com/vi/6aQbd-1SY_8/0.jpg)](https://youtu.be/6aQbd-1SY_8)
+
+
+[Vídeo: 5.0 Estructurade una impresora 3D](https://youtu.be/6aQbd-1SY_8)
+
 
 ## Partes
 
