--- a/5.2.Montaje.md
+++ b/5.2.Montaje.md
@@ -1,5 +1,7 @@
 ## Montaje de una impresora 3D
 
+![Creality Ender 3 v2](./images/CrealityEnder3_v2.jpg)
+
 Vamos a realizar el montaje de una impresora modelo Creality Ender 3 v2
 
 1. Contenido del paquete
