--- a/6.0.Uso.md
+++ b/6.0.Uso.md
@@ -1,5 +1,32 @@
 ## 6. Uso
-* Menus
-* AutoHome y calibración
+
+* Encendido, uso de menús y autohome
+
+[![Vídeo: 1. Encendido, uso de menús y autohome](https://img.youtube.com/vi/xamx6i5YIqU/0.jpg)](https://youtu.be/xamx6i5YIqU)
+
+[Vídeo: 1. Encendido, uso de menús y autohome](https://youtu.be/xamx6i5YIqU)
+
+
+* Calibración de la cama y el eje Z
+
+[![Vídeo: 4. Calibración de la cama y el eje Z](https://img.youtube.com/vi/Yifxcl4-nkY/0.jpg)](https://youtu.be/Yifxcl4-nkY)
+
+[Vídeo: 4. Calibración de la cama y el eje Z](https://youtu.be/Yifxcl4-nkY)
+
+* Prueba de temperatura y calentamiento
+
+[![Vídeo: 5. Prueba de temperatura y calentamiento de la impresora](https://img.youtube.com/vi/F7Vl42sI460/0.jpg)](https://youtu.be/F7Vl42sI460)
+
+[Vídeo: 5. Prueba de temperatura y calentamiento de la impresora](https://youtu.be/F7Vl42sI460)
+
+
+* Colocación del filamento
+
+[![Vídeo: 6. Poniendo el filamento ](https://img.youtube.com/vi/ZJV_d4eVw2o/0.jpg)](https://youtu.be/ZJV_d4eVw2o)
+
+[Vídeo: 6. Poniendo el filamento](https://youtu.be/ZJV_d4eVw2o)
+
+
 * Impresión
+
 * Cambio filamento
