--- a/6.0.Uso.md
+++ b/6.0.Uso.md
@@ -1,32 +1,64 @@
 ## 6. Uso
 
-* Encendido, uso de menús y autohome
+## Calibración y primeras pruebas
 
-[![Vídeo: 1. Encendido, uso de menús y autohome](https://img.youtube.com/vi/xamx6i5YIqU/0.jpg)](https://youtu.be/xamx6i5YIqU)
+A lo largo de estos vídeos vamos a ver las distintas acciones que haremos en nuestro uso diario de la impresora.
 
-[Vídeo: 1. Encendido, uso de menús y autohome](https://youtu.be/xamx6i5YIqU)
+### Encendido, uso de menús y autohome
 
+Empezamos encendiéndola, damos un repaso por los menús más utilizados y hacemos y autohome
 
-* Calibración de la cama y el eje Z
+[![Vídeo: 6.1. Encendido, uso de menús y autohome](https://img.youtube.com/vi/xamx6i5YIqU/0.jpg)](https://youtu.be/xamx6i5YIqU)
 
-[![Vídeo: 4. Calibración de la cama y el eje Z](https://img.youtube.com/vi/Yifxcl4-nkY/0.jpg)](https://youtu.be/Yifxcl4-nkY)
-
-[Vídeo: 4. Calibración de la cama y el eje Z](https://youtu.be/Yifxcl4-nkY)
-
-* Prueba de temperatura y calentamiento
-
-[![Vídeo: 5. Prueba de temperatura y calentamiento de la impresora](https://img.youtube.com/vi/F7Vl42sI460/0.jpg)](https://youtu.be/F7Vl42sI460)
-
-[Vídeo: 5. Prueba de temperatura y calentamiento de la impresora](https://youtu.be/F7Vl42sI460)
+[Vídeo: 6.1. Encendido, uso de menús y autohome](https://youtu.be/xamx6i5YIqU)
 
 
-* Colocación del filamento
+### Calibración de la cama y el eje Z
 
-[![Vídeo: 6. Poniendo el filamento ](https://img.youtube.com/vi/ZJV_d4eVw2o/0.jpg)](https://youtu.be/ZJV_d4eVw2o)
+La calibración es un proceso que haremos con cierta frecuencia y que nos permite ajustar la altura la que la impresora imprime su primera capa, de que esta capa esté bien adherida a la base dependerá que la pieza no se mueva a lo largo de toda la impresión.
 
-[Vídeo: 6. Poniendo el filamento](https://youtu.be/ZJV_d4eVw2o)
+Es algo que tenemos que hacer de vez en cuando y sobre todo cuando veamos que la primera capa no está todo lo perfecta que debería.
+
+Para hacerlo sólo necesitamos una hoja de papel. 
+
+Ajustaremos la separación entre la boquilla del extrusor y la base para que podamos mover el papel pero notando un poco de resistencia.
+
+Como repetiremos el proceso en las cuatro esquinas, necesitamos que los motores estén librerados (Disable steppers).
+
+Tendremos que calibrar la impresora siempre que llevemos mucho tiempo sin usar la impresora o que la transportemos en coche.
+
+[![Vídeo: 6.4. Calibración de la cama y el eje Z](https://img.youtube.com/vi/Yifxcl4-nkY/0.jpg)](https://youtu.be/Yifxcl4-nkY)
+
+[Vídeo: 6.4. Calibración de la cama y el eje Z](https://youtu.be/Yifxcl4-nkY)
+
+### Prueba de temperatura y calentamiento
+
+Vamos a ver cómo precalentar la impresora (según el tipo de filamento que vayamos a usar) y cómo saber la temperatura a la que está en cada momento.
+
+[![Vídeo: 6.5. Prueba de temperatura y calentamiento de la impresora](https://img.youtube.com/vi/F7Vl42sI460/0.jpg)](https://youtu.be/F7Vl42sI460)
+
+[Vídeo: 6.5. Prueba de temperatura y calentamiento de la impresora](https://youtu.be/F7Vl42sI460)
 
 
-* Impresión
+### Colocación del filamento
+
+Vamos a aprender a colocar el filamento:
+1. Debemos tener los motores liberados (Disable steppers)
+1. Precalentamos la impresora
+1. Cortamos la punta en un ángulo de 45º para facilitar que pase por todos los agujeros
+1. Presionamos la pinza del extrusor para liberar el engraje
+1. Introducimos el filamento hasta que entre en el tubo blanco (PTFE)
+1. Vamos girando la rueda azul del extrusor hasta que el filamento salga por la boquilla
+
+[![Vídeo: 6.6. Poniendo el filamento ](https://img.youtube.com/vi/ZJV_d4eVw2o/0.jpg)](https://youtu.be/ZJV_d4eVw2o)
+
+[Vídeo: 6.6. Poniendo el filamento](https://youtu.be/ZJV_d4eVw2o)
+
+
+### Primera impresión
+
+[![Vídeo: 6.7  Primera impresión](https://img.youtube.com/vi/CZn_CMLIUxs/0.jpg)](https://youtu.be/CZn_CMLIUxs)
+
+[Vídeo: 6.7  Primera impresión](https://youtu.be/CZn_CMLIUxs)
 
 * Cambio filamento
