--- a/6.0.Uso.md
+++ b/6.0.Uso.md
@@ -57,8 +57,33 @@ Vamos a aprender a colocar el filamento:
 
 ### Primera impresión
 
+
+1. Ponemos a precalentar la impresora con el tipo de filamento que tenemos preparado (este paso no es necesario pero ahorra tiempo, mientras seleccionamos el modelo a imprimir)
+1. Seleccionamos el fichero de la tarjeta SD que ya hemos colocado en la impresora
+1. Si queremos modificar alguna de las características, podemos hacerlo desde el menú "Control"
+
 [![Vídeo: 6.7  Primera impresión](https://img.youtube.com/vi/CZn_CMLIUxs/0.jpg)](https://youtu.be/CZn_CMLIUxs)
 
 [Vídeo: 6.7  Primera impresión](https://youtu.be/CZn_CMLIUxs)
 
-* Cambio filamento
+### Cambio filamento
+
+Algo muy frecuente es cambiar de filamento, bien porque queremos usar otro o bien porque se agota los pasos a seguir son los siguientes
+
+1. PreCalentamos la impresora con el tipo de filamento que tenemos puesto en ese momento.
+1. Desde la opción "Control" subimos la temperatura del filamento unos 10-15 grados para hacer que se funda con más facilidad.
+1. Cuando ya tengamos la temperatura adecuada, movemos la rueda del extrusor para sacar un poco de filamento por la boquilla
+1. Ahora movemos la rueda en sentido contrario para retirar el filamento.
+1. Tras unas cuantas vueltas podemos apretar la pinza del extrusor y tirar del filamento
+1. Ahora ponemos la temperatura del extrusor a la adecuada para el nuevo filamento
+1. Cortamos la punta del filamento en bisel a 45º
+1. Introducimos el filamento hasta que llegue al extrusor
+1. Movemos la rueda del extrusor hasta que salga filamento fundido
+1. Veremos que al principio sale un poco del filamento antiguo incluso mezcla de los dos.
+1. Seguros girando la rueda del extrusor hasta que salga el nuevo filamento completamente limpio.
+
+[![Vídeo: 6.8  Cambio de filamento en una impresora 3D](https://img.youtube.com/vi/dhYjlLPN9rw/0.jpg)](https://youtu.be/dhYjlLPN9rw)
+
+
+[Vídeo: 6.8  Cambio de filamento en una impresora 3D](https://youtu.be/dhYjlLPN9rw)
+
