--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -52,6 +52,19 @@ Tinkercad es una herramienta de diseño 3D, utiliza un modelo aditivo, es decir 
   * En propiedades podemos cambiar el nombre  
   * Usar la regla sobre un objeto y así modificar sus dimensiones o ángulos
 
+## Teclas
+
+
+* Ctrl + C, Ctrl + V Copy and paste
+* Ctrl + Z, Ctrl + Y Undo and redo your last step(s)
+* Ctrl + D Duplicate the selected object(s)
+* Ctrl + H Hide the selected object(s)
+* Ctrl + Shift + H Show all hidden objects
+* Ctrl + G Group the selected objects into one shape
+* Ctrl + Shift + G Separate a shape into the single objects
+* L Opens the align tool
+* M Takes you to the mirror tool
+
 ## Uso en clase
 
 [Ejemplo de curso de 3 sesiones](Desarrollo_clases.md)
