--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -106,3 +106,10 @@ Confirmación de que eres un docente en el rol
 Lecciones temáticas
 Creacion de clases
 Cómo entran los alumnos
+
+
+## Más cosas con Tinkercad
+
+Todo tipo de proyectos robóticos
+
+[Proyectos solares](https://www.instructables.com/Sparklab-Create-a-Solar-Powered-Invention/)
