--- a/9.6.BlockScad.md
+++ b/9.6.BlockScad.md
@@ -15,3 +15,9 @@ Tras la aparence simplicidad de los bloques permite hacer diseños muy complejos
 [Tutoriales](https://www.blockscad3d.com/edu/lessons/)
 
 [Recuros para profesores](https://www.blockscad3d.com/edu/resources/)
+
+## Videotutoriales de Jorge Lobo
+
+[Parte 1](https://www.youtube.com/watch?v=l80gO9sqZ1g&feature=youtu.be)
+
+[Parte 2](https://www.youtube.com/watch?v=Fhsd4bp3f98)
