--- a/9.2.Tinkercad.md
+++ b/9.2.Tinkercad.md
@@ -99,6 +99,7 @@ https://weareprintlab.com/blog/5-tinkercad-shortcuts-you-need-to-know
 
 https://caractermaker.es/category/diseno-3d/
 
+[Tinkercad for teachers](https://www.youtube.com/playlist?list=PLV6cmKvnKRs4l7FF0kieb84rl3C3L2sbS)
 
 ## Para docentes
 
