--- a/0.2.Aplicaciones.md
+++ b/0.2.Aplicaciones.md
@@ -22,6 +22,8 @@
 
 [Modelo](https://www.thingiverse.com/thing:2485063)
 
+[Propuestas de usos educativos de la impresión 3D](http://www3.gobiernodecanarias.org/medusa/ecoescuela/3d/impresion-3d/como-funciona/propuestas-de-uso-educativo-de-la-impresion-3d/)
+
 ## Juguetes
 
 [Spinners](https://github.com/javacasm/Spinners)
