--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -8,26 +8,39 @@
 
 ## CREALITY ENDER 3 (160-180eu) 
 
-![Ender 3](https://img.staticbg.com/thumb/large/oaupload/banggood/images/15/85/d40f00b0-8905-4d1e-b8cb-737a86e17f68.jpg)
+![Ender 3](./images/Ender3.jpg)
 
 [Videoreview](https://www.youtube.com/watch?v=6LQl-UUEVO8)
 
 ## Geeetech A10 3D Printer (160eu)
 
-![A10](https://www.gizlogic.com/wp-content/uploads/2018/09/Geeetech-A10.jpg)
+![A10](./images/Geeetech-A10.jpg)
 
 ## Anet A8 (130eu)
 
-![Anet a8](https://gloimg.gbtcdn.com/soa/gb/pdm-product-pic/Distribution/2018/01/09/goods_img_big-v1/20180109121635_60388.jpg)
+![Anet a8](./images/20180109121635_60388.webp)
 
 
 ## Anycubics i3 Mega
 
-![anycubis](https://images-na.ssl-images-amazon.com/images/I/611X3q3rWIL._SX425_.jpg)
+![anycubics](./images/Anycubics_i3_Mega.jpg)
 
 [Comparativa de impresoras 3D](http://comohacer.eu/comparativa-impresoras-3d/#Comparativa_de_impresoras_3D)
 
 [Otra comparativa](http://buenosybaratos.es/electronica/impresora-3d/las-mejores-impresoras-3d/)
+
+
+## Kingroon Kp3S
+
+![kingoogKp3S](./images/kingoogKp3S.jpg)
+
+Se trata de una impresora compacta, de tamaño aceptable y con una buena área de impresión 180x180, con un "semi" extrusor directo que nos va a evitar tema de atascos si estamos empezando.
+
+Esta no la he probado (todavía) pero el compañero Juan Pablo Moraga nos la recomienda y me fío 100% de su criterio
+
+[Vídeo donde la revisan](https://www.youtube.com/watch?v=4lRdFfXaNj8)
+
+Se puede conseguir por unos 140€
 
 ## ¿Dónde comprarlas?
 
