--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -21,7 +21,11 @@
 ![Anet a8](./images/20180109121635_60388.webp)
 
 
-## Anycubics i3 Mega
+## Artillery Genius (250e)
+
+![Artillery Genius](./images/artillery-genius-1.jpg)
+
+## Anycubics i3 Mega (300€)
 
 ![anycubics](./images/Anycubics_i3_Mega.jpg)
 
