--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -10,19 +10,19 @@ http://bit.ly/3DPrimaria
 
 ## 1. Uso [Vídeo 1]()
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
-* Preparación impresora
-* Preparación del modelo
-* Impresión
+* [Guía Rápida](./0.5.GuiaRapida.md)
+    * Preparación impresora
+    * Preparación del modelo
+    * Impresión
 
 ## 2. Modelos 3D [Vídeo 2]()
 * ¿Dónde encontrarlos? [Repositorios de diseños](./2.0.Repositorios.md)
 
 ## 3. Programas para imprimir
 * [Laminadores/Slicers](./3.0.Slicers.md) 
-* Cura  [Vídeo 3.1]() 
-* Prusa Slicer
+* [Cura](./3.1.Cura.md)
+* [PrusaSlicer](./3.2.Prusaslicer.md)
 * [Arregladores de piezas](./3.4.ReparacionPiezas.md)
-
 
 ## 4. [Tipos de filamentos](./4.0.Filamentos.md) 
 * tipos
@@ -31,50 +31,45 @@ http://bit.ly/3DPrimaria
 
 ## 5. Montaje y puesta a punto
 * [Estructura de una impresora](./5.0.EstructuraImpresora3D.md)
+* [Tipos de impresoras](5.1.0.Impresoras3D.md) y [geometrías](./5.1.1.Geometrías.md)
+* [Modelos de impresoras 3D](./5.1.2.Modelos.md)
 * [Montaje](./5.2.Montaje.md)
 * Calibración
 * Pruebas
 
-## 6. Uso
+## 6. [Uso](./6.0.Uso.md)
 * Menus
 * AutoHome y calibración
 * Impresión
 * Cambio filamento
+* Matenimiento
+    * Limpieza
+    * Engrasado
+    * Ajustes
+    * Tensión de las correas
+* Problemas más frecuentes
+    * Atascos
+    * Falta de calibración
+    * Falta de tensión de las correas
+    * Rotura o falta de ajuste de driver de motores
+    * [Fallos de impresión](./6.8.FallosImpresion.md)
 
-## 7. Mantenimiento
-* Limpieza
-* Engrasado
-* Ajustes
-* Tensión de las correas
+## 7. Diseño 3D
+* Programas de diseño
+* [Diseñando con Tinkercad](./7.2.Tinkercad.md)
+    * Diseños sencillos
+    * Piezas disponibles
+    * Importando modelos
+    * Importando 2D
+* [Freecad](./7.3.Freecad.md)
+* [Blender](./7.4.Blender.md)
+* [BlockScad](./7.5.BlockScad.md)
+* [2D to 3D](7.6.2d-To-3D.md)
 
-
-## 8. Problemas más frecuentes
-* Atascos
-* Falta de calibración
-* Falta de tensión de las correas
-* Rotura o falta de ajuste de driver de motores
-* [Fallos de impresión](./7.5.FallosImpresion.md)
-
-
-## 9. Diseño 3D
-
-### 9.1 Programas de diseño
-
-### 9.2 [Diseñando con Tinkercad](./9.2.Tinkercad.md)
-* Diseños sencillos
-* Piezas disponibles
-* Importando modelos
-* Importando 2D
-
-### 9.3 [Freecad](./9.3.Freecad.md)
-
-### 9.4 [Blender](./9.4.Blender.md)
-
-### 9.5 [2D to 3D](9.5.2d-To-3D.md)
-
-### 9.6 [BlockScad](./9.6.BlockScad.md)
 
 ## 10. Recetario
 * Mis piezas no se ajustan: [Calibración avanzada](https://coronavirusmakersmadrid.org/prueba-de-tolerancia/) 
 * Pie de elefante
 * Reciclaje: ¿Qué hago con los restos/sobrantes/piezas defectuosas?
+
+## [Recursos](./Recursos.md)
