--- a/5.2.Montaje_Ender3.md
+++ b/5.2.Montaje_Ender3.md
@@ -12,6 +12,8 @@ Vamos a realizar el montaje de una impresora modelo Creality Ender 3 v2
 
 2. Montaje de la estructura del eje Z
 
+Mientras montamos la impresora la estructura debemos de dejar los tornillos un poquito suelto hasta que esté todo montado y luego damos un apretón general si lo apretamos desde el principio podemos dar lugar a malas geometría.
+
 [![Vídeo: 2.  Montaje de la estructura del eje z - Creality Ender 3 v2](https://img.youtube.com/vi/Ca5jGEw7FR0/0.jpg)](https://youtu.be/Ca5jGEw7FR0)
 
 [Vídeo: 2.  Montaje de la estructura del eje z - Creality Ender 3 v2](https://youtu.be/Ca5jGEw7FR0)
