--- a/7.0.HerramientasDiseño3D.md.md
+++ b/7.0.HerramientasDiseño3D.md.md
@@ -1,5 +1,12 @@
 #### Herramientas de diseño en 3D
 
+* Diseño orgánico
+![Diseño orgánico](./images/diseñoOrganico.jpeg)
+
+* Diseño paramétrico o CAD
+
+![Diseño paramétrico o CAD](./images/diseñoParametrico.jpeg)
+
 ![cad](./images/FourCylinderEngine.gif)
 
 * [FreeCad](http://www.freecadweb.org/)
