--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -55,7 +55,7 @@ http://bit.ly/3DPrimaria
     * [Fallos de impresión](./6.8.FallosImpresion.md)
 
 ## 7. Diseño 3D
-* Programas de diseño
+* [Programas de diseño](./7.0.HerramientasDiseño3D.md)
 * [Diseñando con Tinkercad](./7.2.Tinkercad.md)
     * Diseños sencillos
     * Piezas disponibles
@@ -64,7 +64,8 @@ http://bit.ly/3DPrimaria
 * [Freecad](./7.3.Freecad.md)
 * [Blender](./7.4.Blender.md)
 * [BlockScad](./7.5.BlockScad.md)
-* [2D to 3D](7.6.2d-To-3D.md)
+* [SketchUp](./7.6.SketchUp.md)
+* [2D to 3D](7.9.2d-To-3D.md)
 
 
 ## 10. Recetario
