--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -42,11 +42,14 @@ http://bit.ly/3DPrimaria
 * AutoHome y calibración
 * Impresión
 * Cambio filamento
-* Matenimiento
+* [Proyectos 3D](./6.3.Proyectos3D.md)
+* [Matenimiento](./6.4.Mantenimiento.md)
     * Limpieza
     * Engrasado
     * Ajustes
     * Tensión de las correas
+* [Mejoras de calidad](./6.5.MejoraCalidad.md)    
+* [Escaneado 3D](./6.7.Escaneado3D.md)
 * Problemas más frecuentes
     * Atascos
     * Falta de calibración
